[package]
name = "self-stream-case6-refined"
version = "0.1.0"
edition = "2021"

[dependencies]
actix.workspace = true
color-eyre.workspace = true
futures-util.workspace = true
paste.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true, features = ["time"] }
